--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ html {
 
 
 body {
-    font-family: sans-serif;
+    font-family: "Rubik", sans-serif;
     line-height: 1;
     font-weight: 400;
     color: #555;
@@ -87,6 +87,8 @@ body {
     font-size: 2rem;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
+
+    transition: background-color 0.3s;
 }
 
 .btn--full:link,
@@ -94,13 +96,31 @@ body {
     background-color: #e67e22;
     color: #fff;
 }
+
+.btn--full:hover,
+.btn--full:active {
+    background-color: #cf711f;
+    
+}
+
 .btn--outline:link,
 .btn-outline:visited{
     background-color: #fff;
     color: #555;
 }
 
+.btn--outline:hover,
+.btn-outline:active{
+    background-color: #fdf2e9;
+    
+    box-shadow: inset 0 0 0 3px #fff;
+    
+}
 
 .hero-img{
     width: 100%;
+}
+
+.margin-right-sm{ 
+    margin-right: 1.6rem;
 }
