--- a/css/style.css
+++ b/css/style.css
@@ -51,20 +51,11 @@ body {
     color: #555;
 }
 
-.section-hero{
-    background-color: #fdf2e9;
-    padding: 9.6rem 0;
-}
 
-.hero {
-    max-width: 130rem;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 9.6rem;
-    align-items: center;
-    
-}
+/***********************************/
+/**GENERAL REUSABLE COMPONENTS**/
+/***********************************/
+
 .heading-primary{
     font-size: 5.2rem;
     font-weight: 700;
@@ -73,11 +64,7 @@ body {
     letter-spacing: -0.5px;
     margin-bottom: 3.2rem;
 }
-.hero-description{
-    font-size: 2rem;
-    line-height: 1.6;
-    margin-bottom: 4.8rem;
-}
+
 
 .btn:link,
 .btn:visited {
@@ -118,13 +105,66 @@ body {
     
 }
 
-.hero-img{
-    width: 100%;
-}
 
 .margin-right-sm{ 
     margin-right: 1.6rem;
 }
+
+
+
+/***********************************/
+/**HEADER**/
+/***********************************/
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+
+    /* Because we want to have a sticky header*/
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
+
+
+.logo{
+    height: 2.2rem;
+}
+
+
+/***********************************/
+/**HERO SECTION**/
+/***********************************/
+
+
+.section-hero{
+    background-color: #fdf2e9;
+    padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+    max-width: 130rem;
+    margin: 0 auto;
+    padding: 0 3.2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 9.6rem;
+    align-items: center;
+    
+}
+
+.hero-description{
+    font-size: 2rem;
+    line-height: 1.6;
+    margin-bottom: 4.8rem;
+}
+
+
+.hero-img{
+    width: 100%;
+}
+
 
 .delivered-meals{
     display: flex;
