--- a/css/style.css
+++ b/css/style.css
@@ -1,117 +1,3 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
--Font sizes(px);
-10/ 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 
-
--Font weights:
-Default: 400
-
--Line heights: 
-Default: 1
-
-
-
---- 02 COLORS
-
-Primary: #e67e22
-
--Tints:
--Shades:
--Accents:
--Greys:
-
---- 05 SHADOWS
-
---- 06 BORDER-RADIUS
-
---- 07 WHITE SPACE
-- Spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-
-
-
-
-html {
-    font-size: 62.5%;
-}
-
-
-body {
-    font-family: "Rubik", sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
-}
-
-
-/***********************************/
-/**GENERAL REUSABLE COMPONENTS**/
-/***********************************/
-
-.heading-primary{
-    font-size: 5.2rem;
-    font-weight: 700;
-    line-height: 1.05;
-    color: #333;
-    letter-spacing: -0.5px;
-    margin-bottom: 3.2rem;
-}
-
-
-.btn:link,
-.btn:visited {
-    display: inline-block;
-
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 9px;
-
-    transition: background-color 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-    background-color: #e67e22;
-    color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-    background-color: #cf711f;
-    
-}
-
-.btn--outline:link,
-.btn-outline:visited{
-    background-color: #fff;
-    color: #555;
-}
-
-.btn--outline:hover,
-.btn-outline:active{
-    background-color: #fdf2e9;
-    
-    box-shadow: inset 0 0 0 3px #fff;
-    
-}
-
-
-.margin-right-sm{ 
-    margin-right: 1.6rem;
-}
-
-
-
 /***********************************/
 /**HEADER**/
 /***********************************/
@@ -132,6 +18,43 @@ body {
     height: 2.2rem;
 }
 
+/***********************************/
+/**NAVIGATION**/
+/***********************************/
+
+.main-nav-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 3.2rem;
+   
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+    display: inline-block;
+    text-decoration: none;
+    color: #333;
+    font-weight: 500;
+    font-size: 1.8rem;
+    transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+    color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited{
+    padding: 1.2rem 2.4rem;
+    border-radius: 9px;
+    color:#fff;
+    background-color: #e67e22;
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active{
+    background-color: #cf711f;
+}
 
 /***********************************/
 /**HERO SECTION**/
@@ -198,3 +121,64 @@ body {
     color: #cf711f;
     font-weight: 700;
 }
+
+/***********************************/
+/**HOW IT WORKS SECTION**/
+/***********************************/
+
+.section-how{
+    padding: 9.6rem 0;
+}
+
+.step-number{
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;
+    margin-bottom: 1.2rem;
+}
+
+.step-img-box{
+    position: relative;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+    content: "";
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.step-img-box::before{
+
+    width: 60%;   
+    /* 60% of parent's width */
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    
+    z-index: -2;
+}
+
+.step-img-box::after {
+    width: 45%;
+    padding-bottom: 45%;
+    background-color: #fae5d3;
+    z-index: -1;
+}
+
+.step-img{
+    width: 35%;
+}
+
+.step-description{
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+
