--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@
 }
 
 
-.logos {
+.logos img{
     height: 3.2rem;
     filter: brightness(0);
     opacity: 50%;
@@ -215,3 +215,33 @@
 }
 
 
+
+/***********************************/
+/**MEALS SECTION**/
+/***********************************/
+
+.section-meals{
+    padding: 9.6rem 0;
+}
+
+.meal-title{
+    font-size: 2rem;
+    color: #333;
+    font-weight: 600;
+    margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.meal-attribute{
+    font-size: 1.8rem;
+}
+
+.meal-img {
+    width: 100%;
+}
