--- a/css/style.css
+++ b/css/style.css
@@ -231,10 +231,25 @@
     margin-bottom: 3.2rem;
 }
 
-
+.meal-attributes {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 
 .meal-attribute{
     font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    
+}
+
+.meal-icon {
+    height: 2.4rem;
+    width: 2.4rem;
+    color: #e67e22;
 }
 
 .meal-img {
