--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,46 @@
     padding: 9.6rem 0;
 }
 
+.meal {
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+    border-radius: 11px;
+    overflow: hidden;
+   
+}
+
+.meal-content {
+    padding: 4.8rem;
+}
+
+
+.meal-tags {
+    margin-bottom: 1.2rem;
+    display: flex;
+    gap: 0.4rem;
+}
+
+.tag {
+    display: inline-block;
+    padding: 0.4rem 0.8rem;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: #333;
+    border-radius: 100px;
+}
+
+.tag--vegetarian {
+    background-color: #51cf66;
+}
+
+.tag--vegan {
+    background-color: #94d82d;
+}
+
+
+.tag--paleo {
+    background-color: #ffd43b;
+}
+
 .meal-title{
     font-size: 2rem;
     color: #333;
