--- a/css/style.css
+++ b/css/style.css
@@ -481,3 +481,9 @@
     font-size: 1.8rem;
     line-height: 1.8;
 }
+
+.plan-details {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    text-align: center;
+}
