--- a/css/style.css
+++ b/css/style.css
@@ -487,3 +487,41 @@
     line-height: 1.6;
     text-align: center;
 }
+
+/***********************************/
+/**CTA SECTION**/
+/***********************************/
+
+.section-cta {
+    padding: 9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #e67e22;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+    border-radius: 11px;
+
+    background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+    height: 50rem;
+
+    overflow: hidden;
+}
+
+.cta-img-box {
+    background-image: linear-gradient(to right bottom, 
+    rgba(235, 151, 78, 0.35), rgba(230, 125, 34, 0.35)),  url("../img/eating.jpg");
+    background-size: cover;
+    background-position: center;
+
+
+};
+
+.cta-text-box {
+    line-height: 1.6;
+
+    
+};
+
+
