--- a/css/style.css
+++ b/css/style.css
@@ -504,9 +504,11 @@
     border-radius: 11px;
 
     background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
-    height: 50rem;
+   
 
     overflow: hidden;
+
+    height: 50rem;
 }
 
 .cta-img-box {
@@ -519,9 +521,25 @@
 };
 
 .cta-text-box {
-    line-height: 1.6;
-
-    
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #45260a;
 };
 
+.cta .heading-secondary {
+    color: #45260a;
+    margin-bottom: 3.2rem;
+}
+
+.cta-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.cta-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+}
 
