CTA css updated

--- a/css/general.css
+++ b/css/general.css
@@ -139,7 +139,7 @@ body {
 }
 
 
-
+.btn,
 .btn:link,
 .btn:visited {
     display: inline-block;
@@ -150,6 +150,10 @@ body {
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
 
+    border: none;
+    cursor: pointer;
+
+    
     /* transition: background-color 0.3s; */
     transition: all 0.3s;
 }
@@ -179,6 +183,21 @@ body {
     box-shadow: inset 0 0 0 3px #fff;
     
 }
+
+
+.btn--form{
+    background-color: #45260a;
+    color: #fdf2e9;
+    align-self: end;
+    padding: 1.2rem;
+}
+
+.btn--form:hover{
+    background-color: #fff;
+    color: #555;
+}
+
+
 .link:link,
 .link:visited{
     display: inline-block;
@@ -217,6 +236,10 @@ body {
 }
 
 
+*:focus{
+    outline: none;
+    box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
 
 
 /* HELPER/SETTINGS CLASSES */
